--- a/style/style.css
+++ b/style/style.css
@@ -52,10 +52,17 @@ nav {
   text-decoration: none;
   color: white;
   transition: transform 0.3s ease;
+  transition: background-color 0.3s ease;
+  transition: color 0.3s ease;
+  transition: padding 0.3s ease;
 }
 
 .navLinks a:hover {
   transform: scale(1.1);
+  background-color: white;
+  color: black;
+  padding: 5px;
+  border-radius: 25px;
 }
 
 #navIcon {
