--- a/style/desktop.css
+++ b/style/desktop.css
@@ -162,7 +162,7 @@
     color: black;
     gap: 2%;
     align-items: stretch;
-    text-align: justify;
+    text-align: left;
   }
   .sugerenciasContainer {
     padding: 25px;
@@ -181,6 +181,9 @@
     font-size: 1em;
     flex-grow: 1;
     overflow: hidden;
+  }
+  .texto h3 {
+    margin-bottom: 10px;
   }
   .sugerenciasCard {
     display: flex;
